--- a/style.css
+++ b/style.css
@@ -5,13 +5,11 @@
   padding: 0;
 }
 
-
 h1 {
   font-size: 30px;
   color: #000;
   text-align: center;
 }
-
 
 .nav-links {
   display: flex;
@@ -21,17 +19,15 @@ h1 {
   list-style: none;
 }
 
-
-.nav-links ul  {
+.nav-links ul {
   list-style: none;
   display: flex;
   gap: 3rem;
-
 }
 
 .nav-links ul li a {
   font-size: 20px;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 a {
@@ -131,6 +127,11 @@ header {
   margin: 0 auto;
 }
 
+.sub-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .btn-primary {
   outline: none;
   border: none;
@@ -180,11 +181,12 @@ h3 {
   gap: 4rem;
   align-items: center;
   height: 80vh;
+  margin-top: 5rem;
 }
 
 .design-image {
   width: 150%;
-  height: 1000px;
+  height: 950px;
   overflow: hidden;
 }
 
@@ -194,7 +196,7 @@ h3 {
   height: auto;
   position: relative;
   left: 8rem;
-  top: -30px;  
+  top: -30px;
 }
 
 .design-text {
@@ -263,6 +265,7 @@ h3 {
   border-bottom-left-radius: 4rem;
   border-top-right-radius: 4rem;
   padding: 0 4rem;
+  position: relative;
 }
 
 .art-flex {
@@ -291,7 +294,7 @@ p {
   /* padding-left: 5rem; */
 }
 
-.art-image .image-one  {
+.art-image .image-one {
   width: 1000px;
   height: auto;
   position: relative;
@@ -306,80 +309,155 @@ p {
 }
 
 .art-image .image-two {
-   /* background-size: 100%, 100%; */
+  /* background-size: 100%, 100%; */
   /* background-position: 190%; */
   /* bottom: 100%; */
-  width: 450px;
+  width: 540px;
   height: auto;
-  position: relative;
-  left: 9rem;
-  top: -1080px;
+  position: absolute;
+  left: 210px;
+  top: -50px;
 }
 
 .f-section {
-  display: inline-table;
-  justify-content: space-between;
-  align-items: center;
-  box-direction: normal;
-  margin-top: 250px;
-  height: 50vh;
-  color: #000;
-  object-fit: contain;
-  background-size: 400%, 100%;
-  background-position: 4%;
-  background-repeat: no-repeat;
-  border-bottom-left-radius: 100px;
+  height: 100vh;
+  margin: 8rem 0;
 }
 
-.f-text{
+.f-flex {
   display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
+  gap: 1rem;
+}
+
+.f-image {
+  overflow: hidden;
+  width: 1000px;
+  height: 900px;
+}
+
+.f-image > img {
+  width: 1000px;
+  height: auto;
+  position: relative;
+  right: 12rem;
+  top: 0px;
+}
+
+.f-text {
+  position: relative;
+  top: 8rem;
+  right: 8rem;
 }
 
 .f-text > h3 {
-font-family:"Ubuntu", sans-serif; 
-font-weight: 500;
-font-size:1.6rem;
-color:hsl(240, 83%, 20%);
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  color: hsl(240, 83%, 20%);
+  margin-top: 2rem;
 }
 .f-text > p {
- font-family: "Ubuntu", sans-serif;
- font-size: 1.4rem;
- font-weight: 300;
- color: hsl(207, 13%, 34%) ;
-
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  color: hsl(207, 13%, 34%);
+  line-height: 2rem;
+  margin-top: 1rem;
 }
+
+
 .footer {
-  background-color:hsl(240, 10%, 16%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: hsl(240, 10%, 16%);
   padding: 7.5rem 0;
   border-top-right-radius: 100px;
 }
 
-  /* img {
-      margin-bottom: 3.6rem;
-  } */
+.footer-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  h4 {
-    font-family:"Ubuntu", sans-serif; 
-      color: white;
-      font-size: 1.6rem;
-      margin-top: 4.5rem;
-      margin-bottom: 2.5rem;
-  }
-
+h4 {
+  font-family: "Ubuntu", sans-serif;
+  color: white;
+  font-size: 1.6rem;
+}
 
 .footer-block {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
+}
+
+.sub-footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1.2rem;
+}
+
+.footer-block > a {
+  font-size: 20px;
+  font-family: 'Overpass', sans-serif;
+  color:  hsl(236, 19%, 66%);
+  margin: .5rem 0;
+}
+
+.margin-left {
+  position: relative;
+  left: 3.4rem;
 }
 
 
 
+/* DROPDOWN CSS */
 
+/* Dropdown Button */
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: transparent;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-top: 1rem;
+  border-radius: 8px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  border-radius: 8px;
+  font-size: 12px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
